[package]
name = "assignment_gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
mongodb = "2.0"
handlebars = "4.1"
hyper = { version = "0.14", features = ["full"] }
dotenv = "0.15"
tower = "0.4"